TMP: Prototype enablePreview DSL for JavaExec